--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
- * @Author: ThanhDieu
+ * @Author: Hoangnguyen
  * @Description: Mã nguồn đếm ngày yêu
  * Copyright (c) 2023 by WusTeam.Com All Rights Reserved. 
 -->
@@ -63,13 +63,13 @@
         <!-- <div class="middle animated bounce Blurkg"> -->
           <div class="middle animated">
             <div class="img-male">
-              <img src="./public/src/img/you.jpg" alt="Thanh Diệu">
-              <span>Thanh Diệu</span>
+              <img src="./public/src/img/you.jpg" alt="Hoàng Nguyễn">
+              <span>Hoàng Nguyễn</span>
             </div>
             <div class="heart"></div>
             <div class="img-female">
-              <img src="./public/src/img/mylove.jpg" alt="My Love">
-              <span>My Love</span>
+              <img src="./public/src/img/mylove.jpg" alt="Thuỳ Linh">
+              <span>Thuỳ Linh</span>
             </div>
           </div>
         </div>
